# libcomserial

./: .gitignore  .gitlab-ci.yml  AUTHORS  COPYING  ChangeLog.md  Makefile.am  Makefile.common  NEWS.md  README.md  autogen.sh  configure.pre  cppcheck  version.sh
doc/: Doxyfile.in  Makefile.am
doc/example/: rs232_to_stdout.cpp  stdin_to_rs232.c
redist/: Makefile.am  comserial.pc.in
src/: Makefile.am  __init__.cpp  ccomserial.cpp  comserial.h  cppcomserial.cpp  cppserialcomm.cpp  cserialcomm.c  cserialcomm.cpp  logger.h  serialcomm.h
src/comserial/: Makefile.am  ccomserial.h  comserial.h  cppcomserial.h  exceptions.h
src/serialcomm/: cppserialcomm.h  cserialcomm.h  exceptions.h
unittests/: Makefile.am  Makefile.test.common
unittests/cinterface/: Makefile.am  ut_cinterface.cpp  ut_cmodule.h
unittests/cppinterface/: Makefile.am  ut_cppinterface.cpp  ut_cppmodule.h  ut_exceptions.h
unittests/fixtures/: Makefile.am  exception.h  fakeserial.cpp  fakeserial.h  fixtures.h  utils.h
unittests/logger/: Makefile.am  ut_dumper.h  ut_internallog.h  ut_log_location.h  ut_logger.cpp
